--- a/src/interfaces/views/tablas.ejs
+++ b/src/interfaces/views/tablas.ejs
@@ -103,7 +103,7 @@
       </li>
       <li class="nav-item" role="presentation">
         <button class="nav-link" id="contratos-tab" data-bs-toggle="tab" data-bs-target="#contratos" type="button"
-          role="tab">Contratos</button>
+          role="tab">Contratos Tarjetas</button>
       </li>
       <li class="nav-item" role="presentation">
         <button class="nav-link" id="prestamos-tab" data-bs-toggle="tab" data-bs-target="#prestamos" type="button"
