--- a/src/interfaces/views/tablas.ejs
+++ b/src/interfaces/views/tablas.ejs
@@ -432,22 +432,22 @@
                     <div class="col-lg-2 col-md-3 footer-links">
                         <h4>Acceso Rapido</h4>
                         <ul>
-                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Home</a></li>
-                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Acerca de Nosotros</a></li>
-                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Servicios</a></li>
-                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Otros</a></li>
-                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Grupo de Trabajo</a></li>
+                            <li><i class="bi bi-chevron-right"></i> <a href="/"> Home</a></li>
+                            <li><i class="bi bi-chevron-right"></i> <a href="/"> Acerca de Nosotros</a></li>
+                            <li><i class="bi bi-chevron-right"></i> <a href="/"> Servicios</a></li>
+                            <li><i class="bi bi-chevron-right"></i> <a href="/"> Otros</a></li>
+                            <li><i class="bi bi-chevron-right"></i> <a href="/"> Grupo de Trabajo</a></li>
                         </ul>
                     </div>
 
                     <div class="col-lg-2 col-md-3 footer-links">
                         <h4>Nuestros Servicios</h4>
                         <ul>
-                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Web Design</a></li>
-                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Web Development</a></li>
-                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Product Management</a></li>
-                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Marketing</a></li>
-                            <li><i class="bi bi-chevron-right"></i> <a href="#"> Graphic Design</a></li>
+                            <li><i class="bi bi-chevron-right"></i> <a href="/"> Web Design</a></li>
+                            <li><i class="bi bi-chevron-right"></i> <a href="/"> Web Development</a></li>
+                            <li><i class="bi bi-chevron-right"></i> <a href="/"> Product Management</a></li>
+                            <li><i class="bi bi-chevron-right"></i> <a href="/"> Marketing</a></li>
+                            <li><i class="bi bi-chevron-right"></i> <a href="/"> Graphic Design</a></li>
                         </ul>
                     </div>
 
