cambios de admin

--- a/src/interfaces/views/index.ejs
+++ b/src/interfaces/views/index.ejs
@@ -221,8 +221,8 @@
             data-aos-delay="100"
           >
             <div class="col-xl-6 col-lg-8">
-              <h2>Raíz Finaciera<span>.</span></h2>
-              <p>Tú banco de confinza.</p>
+              <h2>Raíz Financiera<span>.</span></h2>
+              <p>Tú banco de confianza.</p>
             </div>
           </div>
 
