--- a/src/interfaces/views/registroADMIN.ejs
+++ b/src/interfaces/views/registroADMIN.ejs
@@ -117,7 +117,7 @@
                                 </div>
                                 <div class="col-md-6 mb-3">
                                     <label for="inputApellido2">Segundo Apellido</label>
-                                    <input type="text" class="form-control" id="inputApellido2" name="apellido2 />
+                                    <input type="text" class="form-control" id="inputApellido2" name="apellido2" />
                                 </div>
                             </div>
 
